# jk

./: .gitignore  README.md  init.lua  lazy-lock.json
.claude-plugin/: marketplace.json
demo/: 1937-06-21.md  1937-06-23.md  1937-06-25.md  1937-06-27.md  1937-06-30.md  1937-07-02.md  1937-07-03.md  CLAUDE.md  a1c0.md  a1v0.md  c1m0.md  c1t0.md  d1r0.md  e1c0.md  h1m0.md  i1s0.md  index.md  k1c0.md  l1e0.md  l1g0.md  motd.md  n1c0.md  o1p0.md  s1f0.md  s1s0.md  s1w0.md  t1g0.md  w1k0.md
demo/.claude/: CLAUDE.md
demo/.claude/skills/dossier/: SKILL.md
demo/ai/: a1x0.md  c1a0.md  c1h0.md  e1b0.md  k1l0.md  l1a0.md  l1t0.md  m1d0.md  m1p0.md  p1t0.md  t1a0.md  t1c0.md  v1d0.md  w1d0.md
lua/config/: autocmds.lua  keymaps.lua  options.lua
lua/jk/: claude.lua  follow.lua  headings.lua  links.lua  preview.lua  search.lua  tag_picker.lua  tags.lua  todos.lua  zk_status.lua
lua/plugins/: aerial.lua  blink.lua  bullets.lua  checkbox.lua  colorscheme.lua  dressing.lua  flash.lua  hlslens.lua  lualine.lua  pencil.lua  snacks.lua  telescope.lua  treesitter.lua  ui.lua  zk.lua
plugins/jk-notebook/.claude-plugin/: plugin.json
plugins/jk-notebook/skills/jk-notebook/: SKILL.md
rs/: CLAUDE.md  Cargo.toml  VALIDATION.md
rs/src/: chunk.rs  config.rs  cosine.rs  db.rs  embed.rs  files.rs  frontmatter.rs  main.rs  mcp.rs  ollama.rs  rag.rs  search.rs
scaffold/: CLAUDE.md  config.toml  motd.md
scaffold/.claude/: CLAUDE.md
scaffold/.claude/skills/search-slack/: SKILL.md
scaffold/hooks/: post-merge
scaffold/templates/: default.md  journal.md
